--- a/OnlineQuizzes/Views/Students/AttemptQuiz.cshtml
+++ b/OnlineQuizzes/Views/Students/AttemptQuiz.cshtml
@@ -14,79 +14,91 @@
             @Html.AntiForgeryToken()
 
         <div class="form-horizontal">
-            @foreach (var question in Model.MCQQuestions)
+
+            @for (int i = 0; i < Model.MCQQuestions.Count(); i++)
             {
-                for (int i = 1; i < Model.MCQQuestions.Count(); i++)
+                <label style="display:none">@Html.DisplayFor(modelItem => Model.StudentID))</label>
+                @Html.EditorFor(model => Model.MCQQuestionsAnswers[i].Id, new { htmlAttributes = new { @class = "form-control", @Value = Model.StudentID, @readonly = true, @style = "display:none" } })
+
+                <label style="display: none">@Html.DisplayFor(modelItem => Model.QuizID))</label>
+                @Html.EditorFor(model => Model.MCQQuestionsAnswers[i].QuizId, new { htmlAttributes = new { @class = "form-control", @Value = Model.QuizID, @readonly = true, @style = "display:none" } })
+                <br />
+
+                <label style="color:red">@Html.DisplayFor(modelItem => Model.MCQQuestions[i].QuestionID) - @Html.DisplayFor(modelItem => Model.MCQQuestions[i].QuestionText)? (@Html.DisplayFor(modelItem => Model.MCQQuestions[i].GradeOfQuestion))</label>
+                @Html.EditorFor(model => Model.MCQQuestionsAnswers[i].QuestionID, new { htmlAttributes = new { @class = "form-control", @Value = Model.MCQQuestions[i].QuestionID, @readonly = true, @style = "display:none" } })
+                <br />
+                foreach (var answer in Model.MCQAnswers)
                 {
-                    <br />
-                    <div class="form-group">
-                        @Html.LabelFor(model => @Model.quizAnswers[i].QuestionID, htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-md-10">
-                            @Html.EditorFor(model => @Model.quizAnswers[i].QuestionID, new
-                       {
-                           htmlAttributes = new
-                           {
-                               @class = "form-control",
-                               @Value =
-                               @Html.DisplayFor(modelItem => question.QuestionID),
-                               @readonly = true
-                           }
-                       })
-                            @Html.ValidationMessageFor(model => @Model.quizAnswers[i].QuestionID, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-                }
-                    @*<label style="color:red">@Html.DisplayFor(modelItem => question.QuestionID) - @Html.DisplayFor(modelItem => question.QuestionText)? (@Html.DisplayFor(modelItem => question.GradeOfQuestion))</label>*@
-                    <br />
-                    foreach (var answer in Model.MCQAnswers)
+                    if (answer.QuestionID == Model.MCQQuestions[i].QuestionID)
                     {
-                        if (answer.QuestionID == question.QuestionID)
+
+                        <div class="checkbox">
+
+                            <label>
+                                @Html.EditorFor(model => Model.MCQQuestionsAnswers[i].Answer, new { htmlAttributes = new { @type = "checkbox", @Value = answer.FirstPossibleAnswer, @readonly = true } })
+                                @Html.DisplayFor(modelItem => answer.FirstPossibleAnswer)
+                            </label>
+                        </div>
+                        <div class="checkbox">
+                            <label>
+                                @Html.EditorFor(model => Model.MCQQuestionsAnswers[i].Answer, new { htmlAttributes = new { @type = "checkbox", @Value = answer.SecondPossibleAnswer, @readonly = true } })
+                                @Html.DisplayFor(modelItem => answer.SecondPossibleAnswer)
+                            </label>
+                        </div>
+                        if (answer.ThirdPossibleAnswer != null)
                         {
-                            <input type="checkbox" id="FirstPossibleAnswer" name="FirstPossibleAnswer" />
-                            <label>@Html.DisplayFor(modelItem => answer.FirstPossibleAnswer)</label>
-                            <br />
-                            <input type="checkbox" id="SecondPossibleAnswer" name="SecondPossibleAnswer" />
-                            <label>@Html.DisplayFor(modelItem => answer.SecondPossibleAnswer)</label>
-                            <br />
-                            if (answer.ThirdPossibleAnswer != null)
-                            {
-                                <input type="checkbox" id="ThirdPossibleAnswer" name="ThirdPossibleAnswer" />
-                                <label>@Html.DisplayFor(modelItem => answer.ThirdPossibleAnswer)</label>
-                                <br />
-                            }
-                            if (answer.FourthPossibleAnswer != null)
-                            {
-                                <input type="checkbox" id="FourthPossibleAnswer" name="FourthPossibleAnswer" />
-                                <label>@Html.DisplayFor(modelItem => answer.FourthPossibleAnswer)</label>
-                                <br />
-                            }
+                            <div class="checkbox">
+                                <label>
+                                    @Html.EditorFor(model => Model.MCQQuestionsAnswers[i].Answer, new { htmlAttributes = new { @type = "checkbox", @Value = answer.ThirdPossibleAnswer, @readonly = true } })
+                                    @Html.DisplayFor(modelItem => answer.ThirdPossibleAnswer)
+                                </label>
+                            </div>
+                        }
+                        if (answer.FourthPossibleAnswer != null)
+                        {
+                            <div class="checkbox">
+                                <label>
+                                    @Html.EditorFor(model => Model.MCQQuestionsAnswers[i].Answer, new { htmlAttributes = new { @type = "checkbox", @Value = answer.FourthPossibleAnswer, @readonly = true } })
+                                    @Html.DisplayFor(modelItem => answer.FourthPossibleAnswer)
+                                </label>
+                            </div>
                         }
                     }
                 }
-                @foreach (var question in Model.FillQuestions)
-                {
-                    <br />
-                    <label style="color:red">@Html.DisplayFor(modelItem => question.QuestionID) - @Html.DisplayFor(modelItem => question.QuestionText)? (@Html.DisplayFor(modelItem => question.GradeOfQuestion))</label>
-                    <br />
+            }
+            @for (int i = 0; i < Model.FillQuestions.Count(); i++)
+            {
+                var ContinuePreviousCount = Model.MCQQuestions.Count()+1;
+                <label style="display:none">@Html.DisplayFor(modelItem => Model.StudentID))</label>
+                @Html.EditorFor(model => Model.QuizFillInTheBlankAnswers[i].Id, new { htmlAttributes = new { @class = "form-control", @Value = Model.StudentID, @readonly = true, @style = "display:none" } })
 
-                    <textarea id="Fill" name="Fill" rows="4" cols="50"></textarea>
-                }
+                <label style="display: none">@Html.DisplayFor(modelItem => Model.QuizID))</label>
+                @Html.EditorFor(model => Model.QuizFillInTheBlankAnswers[i].QuizId, new { htmlAttributes = new { @class = "form-control", @Value = Model.QuizID, @readonly = true, @style = "display:none" } })
+                <br />
 
-            </div>
+                <br />
+                <label style="color:red">@Html.DisplayFor(modelItem => Model.FillQuestions[i].QuestionID) - @Html.DisplayFor(modelItem => Model.FillQuestions[i].QuestionText)? (@Html.DisplayFor(modelItem => Model.FillQuestions[i].GradeOfQuestion))</label>
+                @Html.EditorFor(model => Model.QuizFillInTheBlankAnswers[i].QuestionID, new { htmlAttributes = new { @class = "form-control", @Value = Model.FillQuestions[i].QuestionID, @readonly = true, @style = "display:none" } })
+                <br />
+
+                @Html.TextAreaFor(model => Model.QuizFillInTheBlankAnswers[i].Answer, new { cols = 35, @rows = 3 })
+                @*<textarea id="Fill" name="Fill" rows="4" cols="50"></textarea>*@
+            }
+            
+        </div>
             <div class="panel-footer" style="text-align:center">
                 <input type="submit" value="Submit" class="btn btn-primary" />
             </div>
         }
-
     </div>
 </div>
 
 @section Scripts{
-    <script>
+    @*<script>
             $('input[type="checkbox"]').on('change', function () {
                 $('input[type="checkbox"]').not(this).prop('checked', false);
             });
-        </script>
+        </script>*@
 
     <script>
         var count = @Model.quiz.DurationOfQuiz;
