--- a/OnlineQuizzes/Views/Students/AttemptQuiz.cshtml
+++ b/OnlineQuizzes/Views/Students/AttemptQuiz.cshtml
@@ -25,7 +25,7 @@
                     <h4 class="modal-title" style="text-align:center" id="timer">Remaining Time: @Model.quiz.DurationOfQuiz</h4>
                 </div>
                 <div class="modal-body">
-                    @using (Html.BeginForm("SubmitQuiz", "Students"))
+                    @using (Html.BeginForm("SubmitQuiz", "Students", new { QuizID = Model.QuizID}))
                     {
                         @Html.AntiForgeryToken()
 
@@ -157,6 +157,6 @@
 </script>
 <script>
     window.onpopstate = function () {
-        document.getElementById("Save").click();
+        alert("Dont Press Back .. !");
     }; history.pushState({}, '');
 </script>
