Send the QUIZ answers to trainer if it contains Fill in the blank Questions, and also some modifications.

--- a/OnlineQuizzes/Views/Students/MyGrades.cshtml
+++ b/OnlineQuizzes/Views/Students/MyGrades.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<OnlineQuizzes.Models.StudentGrade>
+﻿@model IEnumerable<OnlineQuizzes.Models.Student_Grade>
 
 @{
     ViewBag.Title = "MyGrades";
