--- a/OnlineQuizzes/Views/Shared/_Layout.cshtml
+++ b/OnlineQuizzes/Views/Shared/_Layout.cshtml
@@ -22,12 +22,14 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     @*<li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
+        <li>@Html.ActionLink("About", "About", "Home")</li>
+        <li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
                     @if (User.IsInRole("Trainer"))
                     {
                         <li>@Html.ActionLink("My Own Quizzes", "ListOfMyQuizzes", "Trainers")</li>
+                        <li>@Html.ActionLink("Notification", "Notification", "Trainers")</li>
                     }
+
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
