Trainer can Correct a pending Quizzes and Post Grades

--- a/OnlineQuizzes/Views/Shared/_Layout.cshtml
+++ b/OnlineQuizzes/Views/Shared/_Layout.cshtml
@@ -27,6 +27,7 @@
                     @if (User.IsInRole("Trainer"))
                     {
                         <li>@Html.ActionLink("My Own Quizzes", "ListOfMyQuizzes", "Trainers")</li>
+                        <li>@Html.ActionLink("Student Grades", "ListStudentGrades", "Trainers")</li>
                         <li>@Html.ActionLink("Notification", "Notification", "Trainers")</li>
                     }
 
