--- a/OnlineQuizzes/Views/Students/Pending.cshtml
+++ b/OnlineQuizzes/Views/Students/Pending.cshtml
@@ -1,4 +1,8 @@
-﻿<head>
+﻿@{
+    ViewBag.Title = "Pending ..";
+    Layout = null;
+}
+<head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title</title>
