Trainers and Students Can Edit Their Profiles

--- a/OnlineQuizzes/Views/Shared/_Layout.cshtml
+++ b/OnlineQuizzes/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                     {
                         <li>@Html.ActionLink("My Own Quizzes", "ListOfMyQuizzes", "Trainers")</li>
                         <li>@Html.ActionLink("Student Grades", "ListStudentGrades", "Trainers")</li>
-                        <li>@Html.ActionLink("Notification", "Notification", "Trainers")</li>
+                        <li>@Html.ActionLink("Notifications", "Notification", "Trainers")</li>
                     }
 
                 </ul>
