--- a/OnlineQuizzes/Views/Home/Index.cshtml
+++ b/OnlineQuizzes/Views/Home/Index.cshtml
@@ -1,5 +1,11 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
-
+<head>
+    <style type="text/css">
+        body {
+            background-image: url('/Content/e-learning.jpg');
+        }
+    </style>
+</head>
 
