--- a/OnlineQuizzes/Views/Trainers/Index.cshtml
+++ b/OnlineQuizzes/Views/Trainers/Index.cshtml
@@ -4,6 +4,17 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<hr />
+<head>
+    <style type="text/css">
+        #div1 {
+            background-image: url('/Content/Quiz.jpg');
+            background-repeat: no-repeat;
+            height:200px;
+            width:400px;
+            margin-left:370px;
+        }
+    </style>
+</head><br /><br />
+<div id="div1"></div>
 
 
