--- a/OnlineQuizzes/Views/Shared/_Layout.cshtml
+++ b/OnlineQuizzes/Views/Shared/_Layout.cshtml
@@ -21,9 +21,12 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    @*<li>@Html.ActionLink("Home", "Index", "Home")</li>
-        <li>@Html.ActionLink("About", "About", "Home")</li>
-        <li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
+                    @*<li>@Html.ActionLink("Home", "Index", "Home")</li>*@
+                    @if (!User.IsInRole("Trainer") && !User.IsInRole("Student"))
+                    {
+                        <li>@Html.ActionLink("About", "About", "Home")</li>
+                        <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    }
                     @if (User.IsInRole("Trainer"))
                     {
                         <li>@Html.ActionLink("My Own Quizzes", "ListOfMyQuizzes", "Trainers")</li>
@@ -38,10 +41,10 @@
     </div>
     <div class="container body-content">
         @RenderBody()
-        <hr />
+        @* <hr />
         <footer>
             <p>&copy; @DateTime.Now.Year - Online Quizzes</p>
-        </footer>
+        </footer>*@
     </div>
 
     @Scripts.Render("~/bundles/jquery")
