--- a/OnlineQuizzes/Views/Shared/_Layout.cshtml
+++ b/OnlineQuizzes/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
                         <li>@Html.ActionLink("Student Grades", "ListStudentGrades", "Trainers")</li>
                         <li>@Html.ActionLink("Notifications", "Notification", "Trainers")</li>
                     }
-
+                @*<li> <a href="http://localhost:4200/">Go Admin</a></li>*@
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
